# Agentic-AI

./: Setting up project
coder/output/: code_and_output.txt
coder/src/coder/: crew.py  main.py
financial_researcher_ai/: README.md  pyproject.toml
financial_researcher_ai/output/: report.md
financial_researcher_ai/src/financial_researcher_ai/: crew.py  main.py
stock_picker/memory/: long_term_memory_storage.db
stock_picker/output/: decision.md  research_report.json  trending_companies.json
stock_picker/src/stock_picker/: crew.py  main.py
stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
stock_picker/src/stock_picker/tools/: push_tool.py
