[project]
name = "financial_researcher_ai"
version = "0.1.0"
description = "financial_researcher-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.0,<1.0.0"
]

[project.scripts]
financial_researcher_ai = "financial_researcher_ai.main:run"
run_crew = "financial_researcher_ai.main:run"
train = "financial_researcher_ai.main:train"
replay = "financial_researcher_ai.main:replay"
test = "financial_researcher_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
